--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                </div>                
+                    <div class="parametro-senha">
+                        <h4 class="parametro-senha__titulo">Número de caracteres</h4>
+                        <button class="parametro-senha__botao">-</button>
+                        <button class="parametro-senha__botao">+</button>
+                    </div>
+                </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                 </div>
