--- a/index.html
+++ b/index.html
@@ -24,37 +24,36 @@
             <div class="parametro-coluna__senha">
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                    <div class="parametro-senha">
-                        <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                        <div class="parametro-senha-botoes">
-                            <button class="parametro-senha__botao">-</button>
-                            <p class="parametro-senha__texto">12</p>
-                            <button class="parametro-senha__botao">+</button>
-                        </div>
-                        <div class="parametro-senha-botoes"></div>
+                    <div class="parametro-senha-botoes">
+                        <button class="parametro-senha__botao">-</button>
+                        <p class="parametro-senha__texto">12</p>
+                        <button class="parametro-senha__botao">+</button>
                     </div>
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                     <div class="parametro-senha-checkbox">
                         <input name="maiusculo" type="checkbox" class="checkbox" checked>
-                        <label for="maiusculo">Letras maiúsculas</label>
-                    </div>
-                    <div class="parametro-senha-checkbox">
+                        <label for="maiusculo">Letras Maiúsculas</label>
                         <input name="minusculo" type="checkbox" class="checkbox">
-                        <label for="minusculo">Letras minúsculas</label>
+                        <label for="minusculo">Letras Minusculas</label>
                     </div>
-                    <div class="parametro-senha-checkbox">
+                    <div class="parametro-senha-checkbox" >
                         <input name="numero" type="checkbox" class="checkbox">
                         <label for="numero">Números</label>
-                    </div>
-                    <div class="parametro-senha-checkbox">
                         <input name="simbolo" type="checkbox" class="checkbox">
-                        <label for="simbolo">Símbolos</label>
+                        <label for="simbolo">Simbolos</label>
                     </div>
                 </div>
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <div class="barra"></div>
+                    <div class="forca fraca"></div>
+                    <div class="parametro-senha-textos">
+                        <p>Fraca</p>
+                        <p>Média</p>
+                        <p>Forte</p>
+                    </div>
                 </div>
             </div>
         </div>
