--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha">
+            <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
             <h3 class="parametro-titulo">Personalize sua senha</h3>
@@ -34,15 +34,19 @@
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
                     <div class="parametro-senha-checkbox">
                         <input name="maiusculo" type="checkbox" class="checkbox" checked>
-                        <label for="maiusculo">Letras Maiúsculas</label>
-                        <input name="minusculo" type="checkbox" class="checkbox">
-                        <label for="minusculo">Letras Minusculas</label>
+                        <label for="maiusculo">Letras maiúsculas</label>
                     </div>
-                    <div class="parametro-senha-checkbox" >
+                    <div class="parametro-senha-checkbox">
+                        <input name="minusculo" type="checkbox" class="checkbox">
+                        <label for="minusculo">Letras minúsculas</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
                         <input name="numero" type="checkbox" class="checkbox">
                         <label for="numero">Números</label>
+                    </div>
+                    <div class="parametro-senha-checkbox">
                         <input name="simbolo" type="checkbox" class="checkbox">
-                        <label for="simbolo">Simbolos</label>
+                        <label for="simbolo">Símbolos</label>
                     </div>
                 </div>
                 <div class="parametro-senha">
@@ -54,6 +58,7 @@
                         <p>Média</p>
                         <p>Forte</p>
                     </div>
+                    <p class="entropia"></p>
                 </div>
             </div>
         </div>
